--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.14",
+    "@react-navigation/stack": "^7.0.18",
+    "@reduxjs/toolkit": "^2.4.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-bootsplash": "^6.3.2"
+    "react-native-bootsplash": "^6.3.2",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.3.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
