--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
     "@reduxjs/toolkit": "^2.4.0",
+    "framer-motion": "^11.13.5",
     "react": "18.3.1",
+    "react-modal-sheet": "^3.3.0",
     "react-native": "0.76.3",
     "react-native-bootsplash": "^6.3.2",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-permissions": "^5.2.1",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
