--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-screens": "^4.3.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
