--- a/ios/daily_shepherd/Info.plist
+++ b/ios/daily_shepherd/Info.plist
@@ -31,13 +31,12 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
-<key>NSLocationWhenInUseUsageDescription</key>
-<string>The app requires access to your location for better service functionality.</string>
-<key>NSCameraUsageDescription</key>
-<string>The app requires access to the camera to capture photos or videos.</string>
-<key>NSPhotoLibraryUsageDescription</key>
-<string>The app requires access to your photo library to select images or videos.</string>
-
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The app requires access to your location for better service functionality.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>The app requires access to the camera to capture photos or videos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>The app requires access to your photo library to select images or videos.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>BootSplash</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -59,6 +58,7 @@
 		<string>Urbanist-Medium.ttf</string>
 		<string>Urbanist-Regular.ttf</string>
 		<string>Urbanist-SemiBold.ttf</string>
+		<string>HedvigLettersSerif-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
