--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
     "@reduxjs/toolkit": "^2.4.0",
+    "babel-plugin-optional-require": "^0.3.1",
     "framer-motion": "^11.13.5",
     "react": "18.3.1",
     "react-modal-sheet": "^3.3.0",
@@ -26,6 +27,7 @@
     "react-native-image-picker": "^7.2.3",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.12.5",
     "react-native-permissions": "^5.2.1",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
