--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-modal-sheet": "^3.3.0",
     "react-native": "0.76.3",
     "react-native-bootsplash": "^6.3.2",
+    "react-native-floating-label-input": "^1.4.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-picker": "^7.2.3",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^5.2.1",
+    "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-redux": "^9.2.0",
