--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-bootsplash": "^6.3.2",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-image-crop-picker": "^0.41.6",
     "react-native-image-picker": "^7.2.3",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
