--- a/ios/Podfile
+++ b/ios/Podfile
@@ -48,6 +48,9 @@ end
 target 'daily_shepherd' do
   config = use_native_modules!
 
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
