--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.4.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "20.3.0",
     "@react-native-firebase/auth": "20.3.0",
+    "@react-native-firebase/messaging": "^21.6.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.1.3",
@@ -27,11 +29,13 @@
     "react": "18.3.1",
     "react-modal-sheet": "^3.3.0",
     "react-native": "0.76.3",
+    "react-native-alert-notification": "^0.4.2",
     "react-native-bootsplash": "^6.3.2",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-crop-picker": "^0.41.6",
     "react-native-image-picker": "^7.2.3",
+    "react-native-loader-kit": "^2.0.8",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.5",
