--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,12 +24,12 @@ setup_permissions([
   # 'LocationAccuracy',
   # 'LocationAlways',
   # 'LocationWhenInUse',
-  'MediaLibrary',
+  # 'MediaLibrary',
   # 'Microphone',
   # 'Motion',
   # 'Notifications',
   'PhotoLibrary',
-  'PhotoLibraryAddOnly',
+  # 'PhotoLibraryAddOnly',
   # 'Reminders',
   # 'Siri',
   # 'SpeechRecognition',
