--- a/ios/daily_shepherd/Info.plist
+++ b/ios/daily_shepherd/Info.plist
@@ -27,7 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.77025911882-es68arab1map8sms24213rutgl7lbkrs</string>
+				<string>com.googleusercontent.apps.77025911882-k148hcmib8lghourrdqmglospi5if67a</string>
 			</array>
 		</dict>
 	</array>
@@ -44,8 +44,6 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>The app requires access to the camera to capture photos or videos.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>The app requires access to your location for better service functionality.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>The app requires access to your photo library to select images or videos.</string>
 	<key>UIAppFonts</key>
@@ -56,6 +54,11 @@
 		<string>Urbanist-Regular.ttf</string>
 		<string>Urbanist-SemiBold.ttf</string>
 		<string>HedvigLettersSerif-Regular.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>BootSplash</string>
