--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.9",
     "babel-plugin-optional-require": "^0.3.1",
     "framer-motion": "^11.13.5",
+    "moment": "^2.30.1",
     "patch-package": "^8.0.0",
     "react": "18.3.1",
     "react-modal-sheet": "^3.3.0",
