--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.4.0",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "20.3.0",
     "@react-native-firebase/auth": "20.3.0",
@@ -34,6 +36,7 @@
     "react-native": "0.76.3",
     "react-native-alert-notification": "^0.4.2",
     "react-native-bootsplash": "^6.3.2",
+    "react-native-date-picker": "^5.0.8",
     "react-native-fast-image": "^8.6.3",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-gesture-handler": "^2.21.2",
@@ -41,6 +44,7 @@
     "react-native-image-picker": "^7.2.3",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^5.2.1",
     "react-native-reanimated": "^3.16.5",
