--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,10 +24,10 @@ setup_permissions([
   # 'LocationAccuracy',
   # 'LocationAlways',
   # 'LocationWhenInUse',
-  # 'MediaLibrary',
+  'MediaLibrary',
   # 'Microphone',
   # 'Motion',
-  # 'Notifications',
+  'Notifications',
   'PhotoLibrary',
   # 'PhotoLibraryAddOnly',
   # 'Reminders',
