--- a/ios/daily_shepherd/Info.plist
+++ b/ios/daily_shepherd/Info.plist
@@ -42,12 +42,14 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>This app requires access to convert text to speech</string>
 	<key>NSCameraUsageDescription</key>
 	<string>The app requires access to the camera to capture photos or videos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>The app requires access to your photo library to select images or videos.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
-<string>Your description for why you need speech recognition access</string>
+    <string>Your description for why you need speech recognition access</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Urbanist-Bold.ttf</string>
